weird shift fix

--- a/blog.css
+++ b/blog.css
@@ -119,9 +119,7 @@ a:hover{
 	color: #C31D1D;
 }
 
-.archbody a:hover {
-	border: solid 1px black;
-}
+
 
 h2 {
 	color: black;
